Implemented Account, App Settings, Profile, Subscription Plans & Others

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ahoy">
         <activity
-            android:name=".views.AccountActivity"
+            android:name=".views.PlanSelectionActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".views.CreateProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.WebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.CommonActivity"
             android:exported="false" />
         <activity
             android:name=".views.PlayerActivity"
