--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sdtechnocrat.ahoy">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
         android:allowBackup="true"
@@ -12,9 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ahoy">
         <activity
+            android:name=".views.PreLoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".views.PlanSelectionActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".views.CreateProfileActivity"
             android:exported="false" />
