--- a/settings.gradle
+++ b/settings.gradle
@@ -5,9 +5,9 @@ pluginManagement {
         mavenCentral()
     }
     plugins {
-        id 'com.android.application' version '7.2.0-alpha05'
-        id 'com.android.library' version '7.2.0-alpha05'
-        id 'org.jetbrains.kotlin.android' version '1.6.0'
+        //id 'com.android.application' version '8.4.1'
+        //id 'com.android.library' version '8.4.1'
+        //id 'org.jetbrains.kotlin.android' version '1.6.21'
     }
 }
 dependencyResolutionManagement {
